// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render listbox with the first option selected (snapshot) 1`] = `
<div
  aria-activedescendant="LISTBOX__OPTION__0-1"
  aria-labelledby="lb-title"
  class=""
  id=""
  role="listbox"
  tabindex="0"
>
  <div>
    <div
      class=""
      data-index="0"
      id="LISTBOX__OPTION__0-0"
      role="option"
      style=""
    >
      <div
        style="color: black;"
      >
        Apple
      </div>
    </div>
    <div
      aria-selected="true"
      class=""
      data-index="1"
      id="LISTBOX__OPTION__0-1"
      role="option"
      style="background: rgb(189, 228, 255);"
    >
      <div
        style="color: black;"
      >
        Bananna
      </div>
    </div>
    <div
      class=""
      data-index="2"
      id="LISTBOX__OPTION__0-2"
      role="option"
    >
      <div
        style="color: black;"
      >
        Carrot
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the listbox when user adds native elements as children of listbox (snapshot) 1`] = `
<div>
  <div
    aria-activedescendant="LISTBOX__OPTION__0-0"
    aria-labelledby="lb-title"
    class=""
    id=""
    role="listbox"
    tabindex="0"
  >
    <div>
      <div
        aria-selected="true"
        class=""
        data-index="0"
        id="LISTBOX__OPTION__0-0"
        role="option"
        style="background: rgb(189, 228, 255);"
      >
        Apple
      </div>
      <div
        class=""
        data-index="1"
        id="LISTBOX__OPTION__0-1"
        role="option"
      >
        Bananna
      </div>
      <div
        class=""
        data-index="2"
        id="LISTBOX__OPTION__0-2"
        role="option"
      >
        Carrot
      </div>
    </div>
  </div>
</div>
`;
